# khepera_dnf

./: Description.txt
DNFs and communication with Khepera/: CMakeLists.txt
DNFs and communication with Khepera/app/: DemoDNF.cpp  GUI_DemoDNF.cpp  KheperaDNF.cpp  KheperaSimple.cpp  testConvolution.cpp  testHistogram.cpp
DNFs and communication with Khepera/communication/include/: RobotComm.hpp  RobotListener.hpp  RobotListener_CVCam.hpp  RobotListener_Hue.hpp  RobotListener_PolarCoordinates.hpp  RobotListener_PosLog.hpp  RobotListener_QCam.hpp  RobotListener_SendTarget.hpp
DNFs and communication with Khepera/communication/src/: RobotComm.cpp  RobotListener.cpp  RobotListener_CVCam.cpp  RobotListener_Hue.cpp  RobotListener_PolarCoordinates.cpp  RobotListener_PosLog.cpp  RobotListener_QCam.cpp  RobotListener_SendTarget.cpp
DNFs and communication with Khepera/gui/include/: GUI.hpp  Parameters.hpp  Parameters_NF.hpp  Parameters_NN.hpp  PlotField.hpp  PlotField1D.hpp  PlotFieldMat.hpp  SpinBox.hpp  SpinBoxDouble.hpp
DNFs and communication with Khepera/gui/src/: GUI.cpp  Parameters.cpp  Parameters_NF.cpp  Parameters_NN.cpp  PlotField1D.cpp  PlotFieldMat.cpp  SpinBox.cpp  SpinBoxDouble.cpp
DNFs and communication with Khepera/neural_fields/include/: ElementaryBehavior.hpp  Logger.hpp  Manager.hpp  MatTransform.hpp  MatTransform_1D.hpp  NeuralField.hpp  NeuralFieldBase.hpp  NeuralNode.hpp
DNFs and communication with Khepera/neural_fields/src/: ElementaryBehavior.cpp  Logger.cpp  Manager.cpp  MatTransform_1D.cpp  NeuralField.cpp  NeuralFieldBase.cpp  NeuralNolde.cpp
(+3 files in other folders)
